apps/dev/test/test-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualserivce
spec:
  hosts:
  - test.brandon.local
  gateways:
  - istio-system/test-gateway
  http:
  - route:
    - destination:
        host: test.dev.svc.cluster.local
        port:
          number: 80
