apps/dev/test/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualserivce
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/test-gateway
  http:
  - route:
    - destination:
        host: test.dev.svc.cluster.local
        port:
          number: 80
